<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account">account</string>
    <string name="acra_report_toast">Sorry, the application crashed. An anonymous bug report will be sent to the developers</string>
    <string name="action_add_to_bookmarks">Set watch status</string>
    <string name="action_open_play">@string/home_play</string>
    <string name="action_open_watching">More Info</string>
    <string name="action_remove_from_bookmarks">Remove</string>
    <string name="action_remove_watching">Remove</string>
    <string name="active_code_btn">Active Code</string>
    <string name="active_fail">Sorry! Your Activation Code invalid. Please check your email to get the code</string>
    <string name="active_success_content">&lt;font color=#000000&gt;Version:&lt;/font&gt; &lt;font color=#25B514&gt;%s&lt;/font&gt;&lt;br&gt;&lt;font color=#000000&gt;Code:&lt;/font&gt; &lt;font color=#25B514&gt;%s&lt;/font&gt;&lt;br&gt;&lt;font color=#000000&gt;Expired Date:&lt;/font&gt; &lt;font color=#FF1D1D&gt;%s&lt;/font&gt;</string>
    <string name="active_success_title">&lt;font color=#020202&gt;Active Code Success&lt;/font&gt;</string>
    <string name="actor_background">Background</string>
    <string name="actor_main">Main</string>
    <string name="actor_supporting">Supporting</string>
    <string name="ad_tag_url">https://pubads.g.doubleclick.net/gampad/ads?iu=/21775744923/external/single_ad_samples&amp;sz=640x480&amp;cust_params=sample_ct%3Dlinear&amp;ciu_szs=300x250%2C728x90&amp;gdfp_req=1&amp;output=vast&amp;unviewed_position_start=1&amp;env=vp&amp;impl=s&amp;correlator=</string>
    <string name="add_account">Add account</string>
    <string name="add_site_pref">Add site</string>
    <string name="add_site_summary">Add a clone of an existing site, with a different url</string>
    <string name="add_sync">Add tracking</string>
    <string name="added_sync_format">Added %s</string>
    <string name="ads_will_show_after">Ads will show after %d sec</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="advanced_search_des">Gives you the search results separated by provider</string>
    <string name="alert_stop_video">Player is running, Would you like to stop video</string>
    <string name="all">All</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="anilist_key">anilist_key</string>
    <string name="anim">Anime app by the same devs</string>
    <string name="anime">Anime</string>
    <string name="anime_singular">@string/anime</string>
    <string name="app_dub_sub_episode_text_format">%s Ep %d</string>
    <string name="app_dubbed_text">Dub</string>
    <string name="app_language">App Language</string>
    <string name="app_layout">App Layout</string>
    <string name="app_layout_key">app_layout_key</string>
    <string name="app_name">BongNgoTV</string>
    <string name="app_name_download_path">Cloudstream</string>
    <string name="app_storage">App</string>
    <string name="app_subbed_text">Sub</string>
    <string name="app_theme_key">app_theme_key</string>
    <string name="app_theme_settings">App theme</string>
    <string name="app_version">5.6.84</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applovin_list_item_image_description">Displays more info about the list item.</string>
    <string name="asian_drama">Asian Dramas</string>
    <string name="asian_drama_singular">Asian Drama</string>
    <string name="authenticated_user">Authenticated %s</string>
    <string name="authenticated_user_fail">Failed to authenticate to %s</string>
    <string name="auto_update_key">auto_update</string>
    <string name="automatic">Auto</string>
    <string name="backup_failed">Storage permissions missing, please try again</string>
    <string name="backup_failed_error_format">Error backing up %s</string>
    <string name="backup_key">backup_key</string>
    <string name="backup_settings">Backup data</string>
    <string name="backup_success">Successfully stored data</string>
    <string name="ben_quality">Watch with the highest quality movie</string>
    <string name="benene">Give a benene to the devs</string>
    <string name="benene_count">benene_count</string>
    <string name="benene_count_text">%d Benenes given to devs</string>
    <string name="benene_count_text_none">No Benenes given</string>
    <string name="benene_des">Given benene</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottom_title_key">bottom_title_key</string>
    <string name="bottom_title_settings">Poster title location</string>
    <string name="bottom_title_settings_des">Put the title under the poster</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bug_report_settings_off">Only sends data on crashes</string>
    <string name="bug_report_settings_on">Sends no data</string>
    <string name="bug_report_txt">Report</string>
    <string name="cancel">@string/sort_cancel</string>
    <string name="cartoons">Cartoons</string>
    <string name="cartoons_singular">Cartoon</string>
    <string name="cast_ad_label">Ad</string>
    <string name="cast_casting_to_device">Casting to %1$s</string>
    <string name="cast_closed_captions">Closed captions</string>
    <string name="cast_closed_captions_unavailable">Closed captions unavailable</string>
    <string name="cast_connecting_to_device">Connecting to %1$s</string>
    <string name="cast_disconnect">Disconnect</string>
    <string name="cast_dynamic_group_name_format">%1$s + %2$d</string>
    <string name="cast_expanded_controller_ad_image_description">Image displayed while the cast receiver is playing an ad</string>
    <string name="cast_expanded_controller_ad_in_progress">Ad in progress…</string>
    <string name="cast_expanded_controller_background_image">Album art</string>
    <string name="cast_expanded_controller_live_head_description">Current position is at the head of the live stream</string>
    <string name="cast_expanded_controller_live_stream_indicator">Live stream</string>
    <string name="cast_expanded_controller_loading">Loading…</string>
    <string name="cast_expanded_controller_skip_ad_label">Skip Ad</string>
    <string name="cast_expanded_controller_skip_ad_text">You can skip ad in %1$d…</string>
    <string name="cast_format">Cast: %s</string>
    <string name="cast_forward">Forward</string>
    <string name="cast_forward_10">Forward ten seconds</string>
    <string name="cast_forward_30">Forward thirty seconds</string>
    <string name="cast_intro_overlay_button_text">@android:string/ok</string>
    <string name="cast_invalid_stream_duration_text">--:--</string>
    <string name="cast_invalid_stream_position_text">--:--</string>
    <string name="cast_live_label">LIVE</string>
    <string name="cast_mute">Mute</string>
    <string name="cast_notification_connected_message">Connected to %1$s</string>
    <string name="cast_notification_connecting_message">Connecting to %1$s</string>
    <string name="cast_notification_default_channel_name">Cast</string>
    <string name="cast_notification_disconnect">Disconnect</string>
    <string name="cast_pause">Pause</string>
    <string name="cast_play">Play</string>
    <string name="cast_rewind">Rewind</string>
    <string name="cast_rewind_10">Rewind ten seconds</string>
    <string name="cast_rewind_30">Rewind thirty seconds</string>
    <string name="cast_seek_bar">Playback seek control</string>
    <string name="cast_skip_next">Skip to next item</string>
    <string name="cast_skip_prev">Skip to previous item</string>
    <string name="cast_stop">Stop</string>
    <string name="cast_stop_live_stream">Stop live stream</string>
    <string name="cast_tracks_chooser_dialog_audio">Audio</string>
    <string name="cast_tracks_chooser_dialog_cancel">Cancel</string>
    <string name="cast_tracks_chooser_dialog_closed_captions">Closed Captions</string>
    <string name="cast_tracks_chooser_dialog_default_track_name">Track %1$d</string>
    <string name="cast_tracks_chooser_dialog_none">None</string>
    <string name="cast_tracks_chooser_dialog_ok">OK</string>
    <string name="cast_tracks_chooser_dialog_subtitles">Subtitles</string>
    <string name="cast_unmute">Unmute</string>
    <string name="category_account">Accounts</string>
    <string name="category_general">General</string>
    <string name="category_player">Player</string>
    <string name="category_preferred_media_and_lang">Language</string>
    <string name="category_ui">Layout</string>
    <string name="category_updates">Updates and backup</string>
    <string name="change_providers_img_des">@string/home_change_provider_img_des</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="check_for_update">Check for Update</string>
    <string name="chip_text">Chip text</string>
    <string name="choose_episode">Please choose episode below</string>
    <string name="documentaries">Documentaries</string>
    <string name="home_change_provider_img_des">Change Provider</string>
    <string name="movies">Movies</string>
    <string name="pick_source">Sources</string>
    <string name="pick_subtitle">Subtitles</string>
    <string name="search_hint">Search…</string>
    <string name="search_poster_img_des">@string/result_poster_img_des</string>
    <string name="sort_apply">Apply</string>
    <string name="sort_cancel">Cancel</string>
    <string name="sort_clear">Clear</string>
    <string name="sort_close">Close</string>
    <string name="sort_copy">Copy</string>
    <string name="sort_save">Save</string>
    <string name="subtitle_offset_hint">1000ms</string>
    <string name="subtitle_offset_title">Subtitle delay</string>
    <string name="tv_series">TV Series</string>
</resources>