<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:background="?attr/primaryBlackBackground" android:layout_width="match_parent" android:layout_height="match_parent">
    <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintTop_toTopOf="0">
        <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="horizontal" android:id="@+id/settings_profile" android:padding="20dp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content">
                <androidx.cardview.widget.CardView android:layout_width="50dp" android:layout_height="50dp" app:cardCornerRadius="25dp">
                    <ImageView android:id="@+id/settings_profile_pic" android:layout_width="match_parent" android:layout_height="match_parent"/>
                </androidx.cardview.widget.CardView>
                <TextView android:textSize="18sp" android:textStyle="normal" android:textColor="?attr/textColor" android:gravity="center_vertical" android:layout_gravity="center_vertical" android:id="@+id/settings_profile_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingStart="10dp" android:paddingEnd="10dp"/>
            </LinearLayout>
            <TextView android:id="@+id/settings_general" android:nextFocusDown="@+id/settings_player" android:text="@string/category_general" style="@style/SettingsItem"/>
            <TextView android:id="@+id/settings_player" android:nextFocusUp="@+id/settings_general" android:nextFocusDown="@+id/settings_lang" android:text="@string/category_player" style="@style/SettingsItem"/>
            <TextView android:id="@+id/settings_lang" android:nextFocusUp="@+id/settings_player" android:nextFocusDown="@+id/settings_ui" android:text="@string/category_preferred_media_and_lang" style="@style/SettingsItem"/>
            <TextView android:id="@+id/settings_ui" android:nextFocusUp="@+id/settings_lang" android:nextFocusDown="@+id/settings_updates" android:text="@string/category_ui" style="@style/SettingsItem"/>
            <TextView android:id="@+id/settings_updates" android:nextFocusUp="@+id/settings_ui" android:nextFocusDown="@+id/settings_credits" android:text="@string/category_updates" style="@style/SettingsItem"/>
            <TextView android:id="@+id/settings_credits" android:nextFocusUp="@+id/settings_updates" android:text="@string/category_account" style="@style/SettingsItem"/>
            <TextView android:textColor="?attr/textColor" android:gravity="center" android:layout_gravity="center" android:padding="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_version"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
