<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:id="@+id/search_result_root" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:foreground="@drawable/outline_drawable">
    <androidx.cardview.widget.CardView android:id="@+id/background_card" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_margin="2dp" android:layout_marginBottom="2dp" android:elevation="10dp" app:cardBackgroundColor="?attr/primaryGrayBackground" app:cardCornerRadius="@dimen/rounded_image_radius">
        <ImageView android:id="@+id/imageView" android:duplicateParentState="true" android:layout_width="match_parent" android:layout_height="match_parent" android:foreground="?android:attr/selectableItemBackgroundBorderless" android:scaleType="centerCrop" android:contentDescription="@string/search_poster_img_des"/>
        <TextView android:textColor="@color/textColor" android:id="@+id/text_quality" android:background="@drawable/type_bg_color" style="@style/SearchBox"/>
        <LinearLayout android:layout_gravity="end" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView android:layout_gravity="end" android:id="@+id/text_is_dub" android:background="@drawable/dub_bg_color" android:text="@string/app_dubbed_text" style="@style/SearchBox"/>
            <TextView android:layout_gravity="end" android:id="@+id/text_is_sub" android:background="@drawable/sub_bg_color" android:text="@string/app_subbed_text" style="@style/SearchBox"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <TextView android:textSize="13sp" android:textColor="?attr/textColor" android:ellipsize="end" android:gravity="center" android:layout_gravity="bottom" android:id="@+id/imageText" android:paddingTop="5dp" android:paddingBottom="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:maxLines="2" android:minLines="2" android:paddingStart="5dp" android:paddingEnd="5dp"/>
</LinearLayout>
